--- a/config.toml
+++ b/config.toml
@@ -1,12 +1,12 @@
-baseurl = "https://username.github.io"
+baseurl = "https://dddmelb-c8b03.firebaseapp.com"
 DefaultContentLanguage = "en"
 title = "DDD Melbourne"
 metaDataFormat = "yaml"
-#googleAnalytics = "XXX"
+googleAnalytics = "UA-99087610-1"
 
 [Params]
   subtitle = "DDD Melbourne is a non profit community event run by developers for developers. Anyone can submit a session to the event and delegates then vote on the sessions they want to see."
-  favicon = "img/favicon.ico"
+  favicon = "images/favicon.ico"
   dateFormat = "Mon Jan 2, 2006"
   showDddByNight = true
 
