--- a/wercker.yml
+++ b/wercker.yml
@@ -17,6 +17,9 @@ deploy:
 
 refresh-data:
   steps:
+    - add-ssh-key:
+        keyname: GITHUB_KEY
+        host: github.com
     - script:
       name: generate sessions
       code: |
@@ -24,9 +27,9 @@ refresh-data:
     - script:
       name: commit data updates
       code: |
-        git config --local user.email "dddmelbourne@gmail.com"
-        git config --local user.name "Wercker Deployment"
-        git checkout master
-        git add -A
-        git commit -m "[refresh data] Refreshing site data" || true
-        git push origin master
+          git config --local user.email "dddmelbourne@gmail.com"
+          git config --local user.name "Wercker Deployment"
+          git checkout master
+          git add -A
+          git commit -m "[refresh data] Refreshing site data" || true
+          git push origin master
