--- a/wercker.yml
+++ b/wercker.yml
@@ -2,7 +2,23 @@ box: node
 
 build:
   steps:
+    - add-ssh-key:
+        keyname: GITHUB_KEY
+        host: github.com
     - npm-install
+    - script:
+      name: refresh data
+      code: |
+          node ./scripts/generate-sessions-data.js
+    - script:
+      name: commit data updates
+      code: |
+          git config --local user.email "dddmelbourne@gmail.com"
+          git config --local user.name "Wercker Deployment"
+          git checkout master
+          git add -A
+          git commit -m "[skip ci] Refreshing site data" || true
+          git push origin master
     - arjen/hugo-build@1.16.3:
       version: "0.20.7"
       disable_pygments: true
@@ -14,22 +30,3 @@ deploy:
       code: |
           node ./node_modules/firebase-tools/bin/firebase use production
           node ./node_modules/firebase-tools/bin/firebase deploy --token $FIREBASE_TOKEN
-
-refresh-data:
-  steps:
-    - add-ssh-key:
-        keyname: GITHUB_KEY
-        host: github.com
-    - script:
-      name: generate sessions
-      code: |
-          node ./scripts/generate-sessions-data.js
-    - script:
-      name: commit data updates
-      code: |
-          git config --local user.email "dddmelbourne@gmail.com"
-          git config --local user.name "Wercker Deployment"
-          git checkout master
-          git add -A
-          git commit -m "[refresh data] Refreshing site data" || true
-          git push origin master
