--- a/wercker.yml
+++ b/wercker.yml
@@ -5,6 +5,9 @@ build:
     - add-ssh-key:
         keyname: GITHUB_KEY
         host: github.com
+    - add-to-known_hosts:
+        hostname: github.com
+        fingerprint: 16:27:ac:a5:76:28:2d:36:63:1b:56:4d:eb:df:a6:48
     - npm-install
     - script:
       name: refresh data
