--- a/wercker.yml
+++ b/wercker.yml
@@ -2,6 +2,13 @@ box: node
 
 build:
   steps:
+    - add-ssh-key:
+        keyname: GITHUB_KEY
+        host: github.com
+    - add-to-known_hosts:
+        hostname: github.com
+        fingerprint: 16:27:ac:a5:76:28:2d:36:63:1b:56:4d:eb:df:a6:48
+        type: rsa
     - npm-install
     - script:
       name: refresh data
