--- a/data/important.yml
+++ b/data/important.yml
@@ -2,9 +2,11 @@ dates:
   - date: 2017-05-19T09:00:00+10:00
     text: Call for content opens
     type: content
+    done: true
   - date: 2017-06-10T10:00:00+10:00
     text: Ticket Wave 1 opens
     type: tickets
+    done: true
   - date: 2017-06-17T12:00:00+10:00
     text: Ticket wave 2 opens
     type: tickets
