--- a/wercker.yml
+++ b/wercker.yml
@@ -15,6 +15,10 @@ build:
       code: |
           node ./node_modules/gulp/bin/gulp.js build
     - script:
+      name: refresh data
+      code: |
+          node ./scripts/generate-sessions-data.js
+    - script:
       name: commit data updates
       code: |
           git config --local user.email "dddmelbourne@gmail.com"
