--- a/data/event.yml
+++ b/data/event.yml
@@ -10,7 +10,7 @@ dates:
   - date: 2018-05-07T12:00:00+10:00
     text: Ticket Wave 1 opens
     type: tickets
-    done: false
+    done: true
   - date: 2018-06-02T15:00:00+10:00
     text: Ticket wave 2 opens
     type: tickets
