--- a/data/event.yml
+++ b/data/event.yml
@@ -18,11 +18,11 @@ dates:
   - date: 2018-06-19T18:00:00+10:00
     text: Call for content closes
     type: content
-    done: false
+    done: true
   - date: 2018-06-20T12:00:00+10:00
     text: Voting opens
     type: voting
-    done: false
+    done: true
   - date: 2018-06-29T18:00:00+10:00
     text: Voting closes
     type: voting
