--- a/wercker.yml
+++ b/wercker.yml
@@ -38,4 +38,4 @@ deploy:
       name: deploy to firebase
       code: |
           node ./node_modules/firebase-tools/bin/firebase use production
-          node ./node_modules/firebase-tools/bin/firebase deploy --token $FIREBASE_TOKEN
+          node ./node_modules/firebase-tools/bin/firebase deploy --debug --token $FIREBASE_TOKEN
