--- a/data/event.yml
+++ b/data/event.yml
@@ -1,37 +1,37 @@
 name: "DDD Melbourne"
-date: 2018-09-15T08:30:00+10:00
+date: 2019-08-10T08:30:00+10:00
 price: "$79"
-venue: "Melbourne Town Hall"
+venue: "Melbourne Convention Exhibition Centre"
 dates:
-  - date: 2018-04-27T12:00:00+10:00
+  - date: 2019-04-15T12:00:00+10:00
     text: Call for content opens
     type: content
-    done: true
-  - date: 2018-05-07T12:00:00+10:00
+    done: false
+  - date: 2019-05-06T12:00:00+10:00
     text: Ticket Wave 1 opens
     type: tickets
-    done: true
-  - date: 2018-06-02T15:00:00+10:00
+    done: false
+  - date: 2019-06-01T15:00:00+10:00
     text: Ticket wave 2 opens
     type: tickets
-    done: true
-  - date: 2018-06-19T18:00:00+10:00
+    done: false
+  - date: 2019-06-15T18:00:00+10:00
     text: Call for content closes
     type: content
-    done: true
-  - date: 2018-06-20T12:00:00+10:00
+    done: false
+  - date: 2019-06-16T12:00:00+10:00
     text: Voting opens
     type: voting
-    done: true
-  - date: 2018-07-07T18:00:00+10:00
+    done: false
+  - date: 2019-06-30T18:00:00+10:00
     text: Voting closes
     type: voting
-    done: true
-  - date: 2018-08-11T21:00:00+10:00
+    done: false
+  - date: 2019-07-15T21:00:00+10:00
     text: Agenda Published
     type: agenda
-    done: true
-  - date: 2018-09-15T08:30:00+10:00
+    done: false
+  - date: 2019-08-10T08:30:00+10:00
     text: Conference Day
     type: content
     done: false
